# rag-grounded

./: .gitignore  DESIGN.md  README.md  distributed_systems_rag_eval.md  docker-compose.observability.yml  docker-compose.yml  render.yaml  transformer_architecture.txt  vercel.json
.github/workflows/: ci.yml
api/: .env.example  Dockerfile  pyproject.toml
api/app/: main.py
api/app/db/: client.py
api/app/generation/: __init__.py  citation_parser.py  llm.py  prompt.py
api/app/ingestion/: chunker.py  embedder.py
api/app/retrieval/: bm25.py  hybrid.py  reranker.py  vector.py
api/app/routes/: conversations.py  documents.py  eval.py  messages.py  search.py
api/app/telemetry/: metrics.py  otel.py
api/app/verification/: abstention.py  confidence.py
api/tests/eval/: eval_set.json  results.json  run_eval.py
grafana/dashboards/: rag.json
grafana/provisioning/dashboards/: dashboard.yml
prometheus/: prometheus.yml
web/: Dockerfile  package.json  pnpm-lock.yaml
web/app/: layout.tsx  page.tsx
web/components/: chat-message.tsx  document-list.tsx  source-panel.tsx  upload-zone.tsx
web/lib/: api.ts
